mfmod/reports/extending_dataframes.log
Traceback (most recent call last):
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\ibhan\anaconda3\envs\mfdoc39\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
res = df.mfcalc('dlog( a) =  0.02',showeq=1)
res.pct_change()*100
------------------

Traceback [1;36m(most recent call last)[0m:

[0m  File [0;32m~\anaconda3\envs\mfdoc39\lib\site-packages\IPython\core\interactiveshell.py:3378[0m in [0;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)[0m

[0m  Cell [0;32mIn [9], line 1[0m
    res = df.mfcalc('dlog( a) =  0.02',showeq=1)[0m

[0m  File [0;32mC:\modelflow2\modelflow\modelmf.py:114[0m in [0;35m__call__[0m
    res = self._obj.mf(eq,**kwargs).solve(**{**kwargs,**{'start':start,'slut':slut,'silent':True}})[0m

[0m  File [0;32mC:\modelflow2\modelflow\modelmf.py:55[0m in [0;35msolve[0m
    res = self.model(this,**self.solveopt)[0m

[0m  File [0;32mC:\modelflow2\modelflow\modelclass.py:3625[0m in [0;35m__call__[0m
    outdf = self.model_solver(*args, **newkwargs)[0m

[1;36m  File [1;32mC:\modelflow2\modelflow\modelclass.py:525[1;36m in [1;35mxgenr[1;36m
[1;33m    exec(make_los_text, globals())  # creates the los function[1;36m

[1;36m  File [1;32m<string>:6[1;36m[0m
[1;33m    dlog(values[row,0])=0.02[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m cannot assign to function call

SyntaxError: cannot assign to function call (<string>, line 6)

